# PointBenchWorkShop

./: .env.example  .gitignore  model_evaluator.py  molmo2_gemini_pipeline.py  point_agent.py  pyproject.toml  readme.md  run.sh  runtime_warnings.py
.github/workflows/: pages.yml
data/: data.json  pixmo_metadata.csv
pointarena_champion_page/: README.md  index.html  styles.css
