[project]
name = "pointbench"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "accelerate==1.7.0",
    "anthropic==0.60.0",
    "einops==0.8.1",
    "google-genai==1.73.1",
    "huggingface-hub==0.36.2",
    "loguru==0.7.3",
    "numpy==2.0.2",
    "openai==2.6.1",
    "opencv-python==4.11.0.86",
    "pillow==10.4.0",
    "python-box==7.3.2",
    "python-dotenv==1.1.1",
    "qwen-vl-utils==0.0.14",
    "safetensors==0.5.3",
    "sentencepiece==0.2.0",
    "timm==1.0.15",
    "tokenizers==0.22.2",
    "torch==2.8.0+cu128",
    "torchvision==0.23.0+cu128",
    "tqdm==4.67.1",
    "transformers==4.57.1",
]

[project.optional-dependencies]
flash-attn = [
    "flash-attn==2.7.3",
]

[tool.uv]
package = false

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[[tool.uv.dependency-metadata]]
name = "flash-attn"
version = "2.7.3"
requires-dist = ["torch", "einops"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
